# esptic2udp

./: .gitmodules  CMakeLists.txt  README.md
components/tic2json/: CMakeLists.txt  Kconfig
main/: Kconfig  main.c  wifista.c
